--- a/src/juicy-tile-tree.html
+++ b/src/juicy-tile-tree.html
@@ -8,7 +8,7 @@
     <template>
         <link href="css/jte-fontawesome.css" rel="stylesheet" />
         <link href="css/juicy-tile-tree.css" rel="stylesheet" />
-        <ul id="root">
+        <ul id="root" class="branch">
             <juicy-tile-tree-branch tree="[[that]]" expanded="[[expanded]]" branches="[[tree]]"></juicy-tile-tree-branch>
         </ul>
         <shadow></shadow>
