--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -209,7 +209,7 @@
                     <h1 id="sidebarHeader">
                         Elements
                     </h1>
-                    <juicy-tile-tree id="treeView" tree="[[tree]]"
+                    <juicy-tile-tree id="treeView"
                                      on-juicy-tile-tree-highlight="treeHighlightAction"
                                      on-juicy-tile-tree-highlight-extend="treeHighlightExtendAction"
                                      on-juicy-tile-tree-highlight-remove="treeHighlightRemoveAction"
@@ -217,7 +217,7 @@
                                      on-juicy-tile-tree-hover="treeHoverAction"
                                      on-juicy-tile-tree-blur="treeBlurAction"
                                      on-juicy-tile-tree-drag-item-stop="treeItemDragStop"
-                                     on-juicy-tile-tree-item-name-changed="refreshForm"></juicy-tile-tree>
+                                     on-juicy-tile-tree-item-name-changed="treeItemNameChanged"></juicy-tile-tree>
                 </div>
             </juicy-resizable>
         </juicy-draggable>
