--- a/src/juicy-tile-editor-form.html
+++ b/src/juicy-tile-editor-form.html
@@ -438,7 +438,7 @@
 
                 <div class="toolbar-item" disabled$="{{!isContainer}}" data-applyvalue="gutter">
                     <juicy-popover on-juicy-popover-expand="popoverExpand" on-juicy-popover-collapse="popoverCollapse">
-                        <input class="handle toolbar-button val" placeholder="multiple" value="{{gutter::change}}" />
+                        <input type="text" class="handle toolbar-button val" placeholder="multiple" value="{{gutter::keyup}}" />
                         <div class="expandable">
                             <button class="editable" on-click="gutterIncrease">+</button>
                             <button class="editable" on-click="gutterDecrease">-</button>
@@ -552,7 +552,7 @@
 
                 <div class="toolbar-item" disabled$="{{!isSelection}}" data-applyvalue="width">
                     <juicy-popover on-juicy-popover-expand="popoverExpand" on-juicy-popover-collapse="popoverCollapse">
-                        <input placeholder="multiple" class="handle toolbar-button val" value="{{width::change}}" />
+                        <input placeholder="multiple" class="handle toolbar-button val" value="{{width::keyup}}"  />
                         <div class="expandable">
                             <button class="editable" on-click="widthIncrease">+</button>
                             <button class="editable" on-click="widthDecrease">-</button>
@@ -582,7 +582,7 @@
 
                 <div class="toolbar-item" disabled$="{{!isSelection}}" data-applyvalue="height">
                     <juicy-popover on-juicy-popover-expand="popoverExpand" on-juicy-popover-collapse="popoverCollapse">
-                        <input placeholder="multiple" class="handle toolbar-button val" value="{{height::change}}" />
+                        <input placeholder="multiple" class="handle toolbar-button val" value="{{height::keyup}}"  />
                         <div class="expandable">
                             <button class="editable" on-click="heightIncrease">+</button>
                             <button class="editable" on-click="heightDecrease">-</button>
