--- a/src/juicy-tile-tree.html
+++ b/src/juicy-tile-tree.html
@@ -287,8 +287,10 @@
         proto.branchNameDblclickAction = function (e) {
             var target = e.currentTarget;
             var uid = target.dataset["uid"];
+            var label = this.querySelector(".element-label[data-uid=" + uid + "]");
 
             this.activeUid = uid;
+            label.classList.toggle("active", true);
             target.classList.toggle("active", true);
             target.removeAttribute("readonly");
             target.focus();
@@ -298,7 +300,10 @@
 
         proto.nameBlurAction = function (e) {
             var target = e.currentTarget;
+            var uid = target.dataset["uid"];
+            var label = this.querySelector(".element-label[data-uid=" + uid + "]");
 
+            label.classList.toggle("active", false);
             target.classList.toggle("active", false);
             target.setAttribute("readonly", "readonly");
             target.selectionStart = 0;
