--- a/examples/juicy-tile-grid/menu-content.html
+++ b/examples/juicy-tile-grid/menu-content.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="http://juicy.github.io/github-markdown-css/github-markdown.css">
 
     <!-- Importing Web Component's Polyfill
-    <script src="../../platform/platform.js"></script>
-    <link rel="import" href="../../polymer/polymer.html">-->
+    <script src="../../platform/platform.js"></script>-->
+    <link rel="import" href="../../../polymer/polymer.html">
+
     <!-- Importing Custom Elements -->
     <link rel="import" href="../../../juicy-tile-grid/src/juicy-tile-grid.html">
     <link rel="import" href="../../../juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
@@ -75,16 +76,17 @@
         <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=fork&amp;count=true&amp;size=medium" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=watch&amp;count=true&amp;size=medium" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
 
-        <template bind>
+        <template is="dom-bind" id="root">
             <p>Press Ctrl or Command on your keyboard and move your mouse over an item to edit</p>
             <p>
                 This example shows how to set up static menu section and content secion with dymanic height and flexible width.
             </p>
             <label>
-                <input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
-            <template if="{{editingMode}}">
+                <input type="checkbox" checked="{{model.editingMode::change}}"> Show editor (<span>{{model.editingMode}}</span>)
+            </label>
+            <template is="dom-if" if="{{model.editingMode}}" restamp="true">
                 <div id="aboveOverlay">
-                    <juicy-tile-editor selectionmode></juicy-tile-editor>
+                    <juicy-tile-editor selection-mode="true"></juicy-tile-editor>
                 </div>
                 <script>
                     document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
@@ -93,9 +95,9 @@
                 </script>
             </template>
 
-            <core-localstorage name="juicy-tiles-menu-content" value="{{storedValue}}"></core-localstorage>
-            <juicy-tiles-setup-sync storedvalue="{{storedValue}}"></juicy-tiles-setup-sync>
-            <juicy-tile-grid id="grid" setup="[[json]]">
+            <core-localstorage name="juicy-tiles-menu-content" value="{{model.storedValue}}"></core-localstorage>
+            <juicy-tiles-setup-sync storedvalue="{{model.storedValue}}"></juicy-tiles-setup-sync>
+            <juicy-tile-grid id="grid" setup="[[model.json]]">
                 <small>Static width 25%</small>
                 <small>Flexible width 75%, Dynamic height</small>
                 <h1>Menu</h1>
@@ -151,7 +153,7 @@
 &lt;/juicy-tile-grid&gt;</code></pre>
             <h4>JSON:</h4>
 
-            <pre><code>{{stringify(json, undefined, 4)}}</code></pre>
+            <pre><code>{{model.stringified}}</code></pre>
         </template>
         <script type="text/javascript">
             model = {
@@ -231,14 +233,6 @@
                 }
             };
 
-            model.storedValue = JSON.parse(JSON.stringify(model.json));
-
-            document.addEventListener("polymer-ready", function () {
-                document.querySelector("template").bindingDelegate = new PolymerExpressions();
-                document.querySelector("template").bindingDelegate.stringify = JSON.stringify;
-                document.querySelector("template").model = model;
-            });
-
             function addRow() {
                 var html = '<tr><td>*</td><td>Value X*</td><td>Value Y*</td><td>Value Z*</td></tr>';
 
@@ -258,6 +252,10 @@
                     tds[i].innerHTML += " modified";
                 }
             }
+
+            model.storedValue = JSON.parse(JSON.stringify(model.json));
+            model.stringified = JSON.stringify(model.json, undefined, 4);
+            document.querySelector("template#root").model = model;
         </script>
     </article>
 </body>
