--- a/examples/juicy-tile-grid/two-tables.html
+++ b/examples/juicy-tile-grid/two-tables.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="http://juicy.github.io/github-markdown-css/github-markdown.css">
 
     <!-- Importing Web Component's Polyfill
-    <script src="../../platform/platform.js"></script>
-    <link rel="import" href="../../polymer/polymer.html">-->
+    <script src="../../platform/platform.js"></script>-->
+    <link rel="import" href="../../../polymer/polymer.html">
+
     <!-- Importing Custom Elements -->
     <link rel="import" href="../../../juicy-tile-grid/src/juicy-tile-grid.html">
     <link rel="import" href="../../../juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
@@ -91,25 +92,26 @@
         <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=fork&amp;count=true&amp;size=medium" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
         <iframe src="http://ghbtns.com/github-btn.html?user=juicy&amp;repo=juicy-tile-editor&amp;type=watch&amp;count=true&amp;size=medium" allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></iframe>
 
-        <template bind>
+        <template is="dom-bind" id="root">
             <p>Press Ctrl or Command on your keyboard and move your mouse over an item to edit</p>
             <p>This example shows how to create two tables with dynamic heights and tiles all around.</p>
             <label>
-                <input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
-            <template if="{{editingMode}}">
+                <input type="checkbox" checked="{{model.editingMode::change}}"> Show editor (<span>{{model.editingMode}}</span>)
+            </label>
+            <template is="dom-if" if="{{model.editingMode}}" restamp="true">
                 <div id="aboveOverlay">
-                    <juicy-tile-editor selectionmode></juicy-tile-editor>
+                    <juicy-tile-editor selection-mode="true"></juicy-tile-editor>
                 </div>
                 <script>
-                    document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function(e) {
-                        e.target.templateInstance.model.editingMode = false;
+                    document.querySelector("juicy-tile-editor").addEventListener("juicy-tile-editor-close", function (e) {
+                        document.querySelector("template#root").set("model.editingMode", false);
                     });
                 </script>
             </template>
 
-            <core-localstorage name="juicy-tiles-two-tables" value="{{storedValue}}"></core-localstorage>
-            <juicy-tiles-setup-sync storedvalue="{{storedValue}}"></juicy-tiles-setup-sync>
-            <juicy-tile-grid id="grid" setup="[[json]]">
+            <core-localstorage name="juicy-tiles-two-tables" value="{{model.storedValue}}"></core-localstorage>
+            <juicy-tiles-setup-sync storedvalue="{{model.storedValue}}"></juicy-tiles-setup-sync>
+            <juicy-tile-grid id="grid" setup="[[model.json]]">
                 <div>A title goes here</div>
                 <div>
                     <button type="button" onclick="addMore(0);">Add row to the first table</button>
@@ -264,21 +266,15 @@
                 }
             };
 
-            model.storedValue = JSON.parse(JSON.stringify(model.json));
-
-            document.addEventListener("polymer-ready", function() {
-                document.querySelector("template").bindingDelegate = new PolymerExpressions();
-                document.querySelector("template").model = model;
-            });
-
             var addMore = function(index) {
                 var tbody = document.querySelectorAll("tbody")[index];
 
                 tbody.innerHTML += "<tr><td>x</td><td>Test</td><td>Row</td></tr>";
             };
+
+            model.storedValue = JSON.parse(JSON.stringify(model.json));
+            document.querySelector("template").model = model;
         </script>
     </article>
-
 </body>
-
 </html>
