Update examples to use latest juicy-tiles-setup-sync
https://github.com/Juicy/juicy-tile-editor/issues/84

--- a/examples/juicy-tile-grid/menu-content.html
+++ b/examples/juicy-tile-grid/menu-content.html
@@ -15,8 +15,6 @@
     <link rel="import" href="../../../juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
     <link rel="import" href="../../src/juicy-tile-editor.html">
 
-    <link rel="import" href="../../../core-localstorage/core-localstorage.html">
-
     <style>
         body {
             padding: 50px 20px 20px 20px;
@@ -95,8 +93,7 @@
                 </script>
             </template>
 
-            <core-localstorage name="juicy-tiles-menu-content" value="{{model.storedValue}}"></core-localstorage>
-            <juicy-tiles-setup-sync storedvalue="{{model.storedValue}}"></juicy-tiles-setup-sync>
+            <juicy-tiles-setup-sync name="juicy-tile-editor/examples/juicy-tile-grid/menu-content.html" stored-value="{{model.storedValue}}" use-localstorage="true"></juicy-tiles-setup-sync>
             <juicy-tile-grid id="grid" setup="[[model.json]]">
                 <small>Static width 25%</small>
                 <small>Flexible width 75%, Dynamic height</small>
