--- a/examples/juicy-tile-grid/label-input.html
+++ b/examples/juicy-tile-grid/label-input.html
@@ -14,8 +14,6 @@
     <link rel="import" href="../../../juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
     <link rel="import" href="../../src/juicy-tile-editor.html">
 
-    <link rel="import" href="../../../core-localstorage/core-localstorage.html">
-
     <style>
         body {
             padding: 50px 20px 20px 20px;
@@ -89,8 +87,7 @@
                 </script>
             </template>
 
-            <core-localstorage name="juicy-tiles-label-input" value="{{model.storedValue}}"></core-localstorage>
-            <juicy-tiles-setup-sync storedvalue="{{model.storedValue}}"></juicy-tiles-setup-sync>
+            <juicy-tiles-setup-sync name="juicy-tile-editor/examples/juicy-tile-grid/label-input.html" stored-value="{{model.storedValue}}" use-localstorage="true"></juicy-tiles-setup-sync>
             <juicy-tile-grid id="grid" setup="[[model.json]]">
                 <small>Static width (150px)</small>
                 <small>Flexible width (100% - 160px)</small>
